<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tf2_web_republisher_interfaces</name>
  <version>1.0.0</version>
  <description>Interface definitions for tf2_web_republisher</description>
  <maintainer email="blazej@fictionlab.pl">Błażej Sowa</maintainer>

  <license>BSD</license>

  <author email="jkammerl@willowgarage.com">Julius Kammer</author>
  <author email="paul.gesel@picknik.ai">Paul Gesel</author>
  <author email="blazej@fictionlab.pl">Błażej Sowa</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
