<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tf2_web_republisher</name>
  <version>1.0.0</version>
  <description>Republishing of Selected TFs</description>
  <maintainer email="blazej@fictionlab.pl">Błażej Sowa</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/RobotWebTools/tf2_web_republisher/issues</url>
  <url type="repository">https://github.com/RobotWebTools/tf2_web_republisher</url>

  <author email="jkammerl@willowgarage.com">Julius Kammer</author>
  <author email="paul.gesel@picknik.ai">Paul Gesel</author>
  <author email="blazej@fictionlab.pl">Błażej Sowa</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_web_republisher_interfaces</depend>

  <test_depend>ament_cmake_gmock</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
